k8s/minio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector: { app: minio }
  ports:
  - { name: api,     port: 9000, targetPort: 9000 }
  - { name: console, port: 9001, targetPort: 9001 }
  type: ClusterIP
